# SWP_Discord_Bot_EMP

./: .dockerignore  .gitignore  LICENSE  README.md  TODO.txt  config.ini  docker-compose.yaml  fun_facts.json  pyproject.toml  start.bat
src/discord-bot/contracts/: ports.py
src/discord_bot/: dockerfile
src/discord_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/discord_bot/adapters/: db.py  view.py  view_old.py
src/discord_bot/adapters/controller/: controller.py
src/discord_bot/app/: discord_bot_main.py  gradio_main.py  main.py
src/discord_bot/business_logic/: config_loader.py  discord_logic.py  dish_selector.py  fun_fact_selector.py  model.py  translator.py
src/discord_bot/contracts/: ports.py
src/discord_bot/init/: config_loader.py  db_loader.py  log_loader.py
src/discord_bot/init/db_data/: dishes.csv  fun_facts.csv
tests/: README.md  __init__.py  conftest.py  test_db_loader.py  test_dbms.py  test_dish_selector.py  test_fun_fact_selector.py  test_translator.py
