[project]
name = "discord_bot"
version = "0.1.0"
authors = [{ name = "Emir Keser", email = "ekeser@student.tgm.ac.at" },
           { name = "Paul Hinterbauer", email = "phinterbauer@student.tgm.ac.at" },
           { name = "Mateja Gvozdenac", email = "mgvozdenac@student.tgm.ac.at" }]
requires-python = ">=3.11"
description = "A Discord bot for various functionalities."
readme = "README.md"
dependencies = [
    "pydantic>=2.0",
    "gradio>=5.0",
    "multipledispatch>=0.6",
    "pymongo>=4.0",
    "deep_translator>=1.8.1",
    "discord.py>=2.0",
]

[project.optional-dependencies]
# Optional groups (e.g. dev tools)
dev = [
    "mypy>=1.0",
    "build>=1.2",
    "pyinstaller>=6.0",
    "black>=23.0",
    "ruff>=0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["discord_bot*"]  # optional but nice

[tool.setuptools.package-data]
"discord_bot" = ["py.typed"]

[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 120
target-version = ["py313"]
include = "\\.pyi?$"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "C", "Q"]
exclude = ["__pycache__", "build", "dist"]

[tool.mypy]
files = ["src/discord_bot"]
mypy_path = "src"
explicit_package_bases = true
check_untyped_defs = true
python_version = "3.13"
